@@ -1,0 +1,4 @@
+# Description
+
+This is a recreation of an app I wrote to help us explore the data from a
+large ELISA coating troubleshooting project.
